reports/activity-Lagrange-with-constraints-analysis.log
Traceback (most recent call last):
  File "/Users/caballero/opt/anaconda3/envs/teaching/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/caballero/opt/anaconda3/envs/teaching/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/caballero/opt/anaconda3/envs/teaching/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/caballero/opt/anaconda3/envs/teaching/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/caballero/opt/anaconda3/envs/teaching/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/Users/caballero/opt/anaconda3/envs/teaching/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/caballero/opt/anaconda3/envs/teaching/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/caballero/opt/anaconda3/envs/teaching/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
## Kinetic
T = 0.5*(vr**2/np.cos(alpha)**2+(r*omega)**2)

## Potetial
U = g*r/np.tan(alpha)``

## Total
E=T+U

ax = plt.figure(figsize=(12,8))
plt.plot(t, T, label='Kinetic')
plt.plot(t, U, label='Potential')
plt.plot(t, E, label='Total')
plt.axis([0, 200, 0, 100])
plt.legend()
plt.xlabel('time')
plt.ylabel('Energy/mass');
------------------

[0;36m  Input [0;32mIn [4][0;36m[0m
[0;31m    U = g*r/np.tan(alpha)``[0m
[0m                         ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (4108903756.py, line 5)

